--- a/LLM_saliency_map.ipynb
+++ b/LLM_saliency_map.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyO0Cz/YJ1z+uYOANQ52BYPm",
+      "authorship_tag": "ABX9TyPtkyyk5mSlfK1dxfTAfZBc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23463,6 +23463,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Usecase 1\n",
+        "Prompt the model and analyze its response"
+      ],
+      "metadata": {
+        "id": "zpFv9nJcHllS"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "analyzer = create_generator()"
@@ -23684,7 +23694,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Usecase 3\n",
+        "## Usecase 2\n",
         "Enter your own text and get the model to analyze using a saliency map"
       ],
       "metadata": {
